<resources>
    <string name="app_name">RSA</string>
    <string name="title_key_size">Key size for the public and private key</string>
    <string name="plain_text">Message to encrypt</string>
    <string name="encrypted_text">Encrypted message</string>
    <string name="decrypted_text">Decrypted message</string>
    <string name="p_value">P value</string>
    <string name="q_value">Q value</string>
    <string name="n_value">N value</string>
    <string name="z_value">Z value</string>
    <string name="e_value">E value</string>
    <string name="d_value">D value</string>
    <string name="text_input">Select the key size</string>
    <string name="button_next">Next</string>
    <string name="button_home">Home</string>

    <string name="snackbar_action">Got it!</string>
    <string name="snackbar_message">Enter a valid message</string>
    <string name="snackbar_error">There was error. Try again</string>
</resources>
