<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:fillViewport="true"
    android:scrollbarThumbVertical="@color/colorPrimary"
    tools:context="com.gianfranco.rsa.view.Details">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/p_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/p" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/p_value"
            android:layout_below="@+id/p"
            android:layout_alignParentStart="true" />


        <TextView
            android:text="@string/q_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/q"
            android:layout_below="@+id/p_value"
            android:layout_alignParentStart="true"
            android:layout_marginTop="28dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/q"
            android:layout_alignParentStart="true"
            android:id="@+id/q_value" />

        <TextView
            android:text="@string/n_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/q_value"
            android:layout_alignParentStart="true"
            android:layout_marginTop="24dp"
            android:id="@+id/n" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/n"
            android:id="@+id/n_value" />

        <TextView
            android:text="@string/z_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/n_value"
            android:layout_alignParentStart="true"
            android:layout_marginTop="24dp"
            android:id="@+id/z" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/z"
            android:layout_alignParentStart="true"
            android:id="@+id/z_value" />

        <TextView
            android:text="@string/d_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/z_value"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:id="@+id/d" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/d"
            android:layout_alignParentStart="true"
            android:id="@+id/d_value" />

        <TextView
            android:text="@string/e_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/d_value"
            android:layout_alignParentStart="true"
            android:layout_marginTop="31dp"
            android:id="@+id/e" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/e"
            android:layout_alignParentStart="true"
            android:id="@+id/e_value" />

        <TextView
            android:text="@string/encrypted_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/e_value"
            android:layout_alignParentStart="true"
            android:layout_marginTop="17dp"
            android:id="@+id/encrypted" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/encrypted"
            android:layout_alignParentStart="true"
            android:id="@+id/encrypted_value" />

        <TextView
            android:text="@string/desncrypted_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/encrypted_value"
            android:layout_alignParentStart="true"
            android:layout_marginTop="26dp"
            android:id="@+id/desencrypted" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/desencrypted"
            android:layout_alignParentStart="true"
            android:id="@+id/desencrypted_value" />

        <Button
            android:id="@+id/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/desencrypted_value"
            android:layout_centerHorizontal="true"
            android:text="@string/button_home"
            android:theme="@style/RaisedButton"
            />


    </RelativeLayout>

</ScrollView>
